--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -17,7 +17,7 @@
  
 % Full title of the paper (Capitalized)
 % \Title{Effect of Nanovoid on Fracture Process of Two-Phase $\gamma$($\rm TiAl$)+$\alpha_2$($\rm Ti_3Al$) Alloy}
-\Title{Atomic Investigation on Cold Deformation Behavior of Two Phase Ti-Al Polycrystal with and without Void Defect}
+\Title{Micromechanism of  Cold Deformation of Two Phase Polycrystalline Ti-Al Alloy with and without Void Defect}
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0001-8385-4439} % Add \orcidA{} behind the author's name
 \newcommand{\orcidauthorB}{0000-0002-9582-6301} % Add \orcidB{} behind the author's name
@@ -49,7 +49,7 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 %\conference{} % An extended version of a conference paper
 
 % Abstract (Do not insert blank lines, i.e. \\) 
-\abstract{Cold deformation behavior of poly crystalline metallic material is affected intrinsic defects such as dislocation, etc.  Existing studies on $\alpha_2(\rm{Ti_3Al})$+$\gamma(\rm{TiAl})$  two phase Ti-Al alloy covers about deformation behavior mainly on macro scale. This paper focus on the cold deformation mechanism of two phase Ti-Al alloy at micro scale, and  the role of void defect in deformation process. Molecular dynamics simulations were performed to study the evolution of micro structure in the model under uniaxial tension. Interaction between spherical nano void with different size and position was also examined in the simulation. The results show that i) $\gamma$ phase is the major deformation source of the two phase alloy; ii) Voids defect detracts the strength of the two phase alloy, however the position of void affect the degree of this subtraction: voids located at the $\alpha_2$/$\gamma$ phase boundary have significant detract to strength.}
+\abstract{Cold deformation behavior of poly crystalline metallic material is affected intrinsic defects such as dislocation, etc.  Existing studies on $\alpha_2(\rm{Ti_3Al})$+$\gamma(\rm{TiAl})$  two phase Ti-Al alloy covers about deformation behavior mainly on macro scale. This paper focus on the cold deformation mechanism of two phase Ti-Al alloy at micro scale, and  the role of void defect in deformation process. Molecular dynamics simulations were performed to study the evolution of micro structure in the model under uniaxial tension. Interaction between spherical nano void with different size and position was also examined in the simulation. The results show that i) $\gamma$ phase is the major deformation source of the two phase alloy; ii) Voids defect detracts the strength of the two phase alloy, however the position of void affect the degree of this subtraction: voids located at the $\alpha_2$/$\gamma$ phase boundary have significant detraction to strength.}
 % Keywords
 \keyword{two phase Ti-Al alloy; void defect; molecular dynamics}
 
@@ -58,7 +58,7 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 
 \section{Introduction}
 % and brittle rapture failure 
-The titanium  aluminum based intermetallic alloys are promising high temperature structural materials because of their great corrosion resistance at high temperature. Comparing with nickle based alloy,  alloys have lower density and are pron to be utilized in combustion engine, turbine, and other components work at high temperature ranging from 500 \si{\degreeCelsius} to 900 \si{\degreeCelsius}. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20\% because the weight of components decreased 30\%~40\%. With the advancement of non-ferrous metallurgy, Ti-Al based components has better economic efficiency than ever before. Thus, Ti-Al based alloys have good prospects for applications in aerospace and automobile industry. 
+The titanium  aluminum based intermetallic alloys are promising high temperature structural materials because of their great corrosion resistance at high temperature. Comparing with nickle based alloy,  alloys have lower density and are pron to be utilized in combustion engine, turbine, and other components work at high temperature ranging from 500 \si{\degreeCelsius} to 900 \si{\degreeCelsius} \cite{Clemens2016}. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20\% because the weight of components decreased 30\%~40\% \cite{Bewlay2016}. With the advancement of non-ferrous metallurgy, Ti-Al based components has better economic efficiency than ever before. Thus, Ti-Al based alloys have good prospects for applications in aerospace and automobile industry. 
 Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and polysynthetically twinned crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale defects are initially easily formed in the casting process, such as voids and inclusions \cite{Tang2014}. A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become an effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays a significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior polycrystal with single aluminum \cite{Groh2009} and titanium element \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
 
 The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking, these defects are known to play a fundamental role in the deformation of materials. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement \cite{Xiong2015}. However, few literature covers about deformation mechanism of two phase Ti-Al alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot of work carried out on the  effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical performance of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void defect. Surface defects such as small notches can caused lower high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$  TiAl is also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone.This paper focus on the evolution of microstructure, tend to find out it connection to cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}; Results and discussion are in Section \ref{section:RD}.
@@ -102,7 +102,7 @@ where $E_{total}$ is the total energy of the system, $\rho_{h,i}$, is the host e
 	\label{tab:lattice_parameter}
 \end{table} 
 
-$\gamma $ TiAl has a fcc type cell with an $L1_0$ structure, and $\alpha_2 -\rm Ti_3Al$ has a hcp structure, the two types of initial cells are shown in Fig. \ref{fig:tial-cell}, and the constructing parameters are given by Table \ref{tab:lattice_parameter}. Periodic boundary conditions (PBC) are applied along all three directions, that makes poly crystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 4.6 million atoms. The grain orientation and size were randomly created with Voronoi method by code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains. Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$. 
+$\gamma $ TiAl has a fcc type cell with an $L1_0$ structure, and $\alpha_2 -\rm Ti_3Al$ has a hcp structure, these two types of initial cells are shown in Fig. \ref{fig:tial-cell}, and the constructing parameters are given by Table \ref{tab:lattice_parameter}. Periodic boundary conditions (PBC) are applied along all three directions, that makes poly crystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 4.6 million atoms. The grain orientation and size were randomly created with Voronoi method by code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains. Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$. 
 % In order to study the deformation mechanism of the two phase alloy and the effect of void defect, three types of models were created: Type-1.model without any void defect; Type-2. models with different size void inside $\alpha_2$ phase; Type-3. models with void at $\alpha_2-\gamma$ interface. \ref{tab:lattice_parameter}. The simulation cells of two phase polycrystalline with an initially spherical void at different position are shown in figure .
 \subsection{Analysis method}
 In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and Centro-symmetry parameter(CSP) is used to tell grain boundary from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
@@ -159,7 +159,7 @@ Snapshots of atom configuration at the 5 of 10 key points are shown by Fig. \ref
 \begin{figure}[ht] 
 	\centering
 	\includegraphics[width=1\linewidth]{img/def2}
-	\caption{Microstructure evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) at key point 1 to 10}
+	\caption{Microstructure evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) during yield stage}
 	\label{fig:Defect}
 \end{figure}
 
@@ -175,20 +175,20 @@ where the prefactor $v_0$ gives the velocity that would be obtained for each pot
 	\begin{minipage}{0.495\textwidth}
 		\includegraphics[width=1\linewidth]{img/temp}
 		\centering
-		\caption{Mobility of dislocation}
+		\caption{Mobility of dislocation under stress}
 		\label{fig:temp}
 	\end{minipage}	
 	\hfill
 	\begin{minipage}{0.495\textwidth}		
 		\includegraphics[width=1\linewidth]{img/disum}
 		\centering
-		\caption{Dislocation length}
+		\caption{Dislocation length at different stage }
 		\label{fig:disum}
 	\end{minipage}
 \end{figure}
 
 
-In Fig. \ref{fig:disum}, length of different type dislocation are given at four stages. Dislocations are recognized and identified using the dislocation analysis (DXA) of OVITO. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increase sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuate at a low level. Decomposition of the perfect  dislocations split into Shockley partial dislocations as formulation \ref{eq:dis-1},ref{eq:dis-2}, and the structure spontaneously transform into intrinsic stacking fault, it can be observed in Fig. \ref{fig:Defect}a. 
+In Fig. \ref{fig:disum}, length of different type dislocation are given at four stages. Dislocations are recognized and identified using the dislocation analysis (DXA) of OVITO. The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increase sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuate at a low level. Decomposition of the perfect  dislocations split into Shockley partial dislocations as formulation \ref{eq:dis-1} and \ref{eq:dis-2}. The structure spontaneously transform into intrinsic stacking fault (ISF), it can be observed in Fig. \ref{fig:Defect}a. 
 
 %\begin{equation}\label{eq:dis-1}
 %[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]\\
@@ -206,7 +206,9 @@ Interaction between dislocation with Burgers vector of $1/6 [112] $ and $ 1/6 [1
 \end{equation}
 
 
-The orientation of slip is changed in Fig. \ref{fig:Defect}, because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces, the orientation of slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{intro-structure}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of <a>-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals.  The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2[110] dislocation gliding in one $\gamma$ grain has to be converted in to a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of Burgers vectors and the shear module are different. Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocation, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When slip is forced to cross $\alpha_2$ phase, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+The orientation of slip is changed in Fig. \ref{fig:Defect}, because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces, the orientation of slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{intro-structure}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. 
+
+A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of <a>-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals.  The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2[110] dislocation gliding in one $\gamma$ grain has to be converted in to a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface, dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of Burgers vectors and the shear module are different. Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocation, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When slip is forced to cross $\alpha_2$ phase, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 
 
 \subsection{The effect of void on the strength of material}
@@ -219,15 +221,11 @@ The orientation of slip is changed in Fig. \ref{fig:Defect}, because the crystal
 \end{figure}
 
 In Fig. \ref{fig:model-creation}, voids with different size: 2\AA, 5\AA, 10\AA, 15\AA were placed  at $\alpha_2-\gamma$ phase boundary, inside $\gamma$ phase respectively. The strength of materials with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The existence of void have little impact on the elastic properties of the material, and the model without void defect has the best strength 5.3 GPa, the yield stress of model with void is smaller. Void at $\alpha_2$-$\gamma$ phase boundary  detracts the strength of  material most, and the void inside $\alpha_2$ phase  have less impact on the strength.          
-The effect of void size can be generally calculated by means of classical method proposed by 
+Conventional definition of strength of materials with geometry subtraction was applied to the model, and theoretical strength of the models was calculated by
 \begin{equation} \label{eq:section} 
 \sigma^* = \sigma_0 \cdot \frac{A^*}{A_0}
 \end{equation}
-It  the greater voids detracts the strength of the materials more, however, it has been observed in the simulation that there is a critical value larger than 10 \AA for voids at different position. The voids larger than 10 \AA\ have dramatic detraction to the strength of two phase Ti-Al alloy. Conventional definition of strength of materials with geometry subtraction was applied to the model, and theoretical strength of the models was calculated by formulation :
-	
-
-	
-where $\sigma_0$ is the strength of model without void defects 5.26 Gpa, and $A_0$ is initial section area, $ A = 36000 {AA}^2$, $A^* $ is section area in consider of the subsection that results from the voids. Comparing with the strength determined by molecular dynamics simulation and the result4s calculated with formulation \ref{eq:section}, it can be assumed that the main factor that affects the strength of materials can be attributed to local behavior of the materials, thus revolution of defects should be examined carefully.
+where $\sigma_0$ is the strength of model without void defects 5.26 Gpa, and $A_0$ is initial section area,  $A^*$ is effective section area.  In classic theory, the relationship between void size and strength of the model is linear. However, simulation results reveals that two phase Ti-Al alloy is sensitive to existence of void defect.  Comparing with the strength determined by molecular dynamics simulation and the result4s calculated with formulation \ref{eq:section}, it can be assumed that the main factor that affects the strength of materials can be attributed to local behavior of the materials, thus revolution of defects should be examined carefully.
 
 \begin{figure}[ht]
 	\centering
@@ -254,7 +252,7 @@ where $\sigma_0$ is the strength of model without void defects 5.26 Gpa, and $A_
 %	\label{fig:yield}
 %\end{figure}
 	
-In Fig. \ref{fig:strength} It has been observed that voids detracts the strengths of  material. The max stress  of the simulation cell decreases as the volume of voids are larger. From Fig \ref{fig:stress&strain}, there is a critical value of void radius about 15A, the void greater than 15A cause serious detraction of strength of material.  The decrease rate of loading area are smaller comparing with the detraction of strength, so it can be assumed that the  yield behavior and strength is much more related with local behavior of grain boundaries and void. Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
+In Fig. \ref{fig:strength} It has been observed that voids detracts the strengths of  material. The max stress  of the simulation cell decreases as the volume of voids are larger. From Fig \ref{fig:stress&strain}, there is a critical value of void radius about 15 \AA, the void greater than 15 \AA cause serious detraction of strength of material.  The decrease rate of loading area are smaller comparing with the detraction of strength, so it can be assumed that the  yield behavior and strength is much more related with local behavior of grain boundaries and void. Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
 
 \subsection{Evolution of spherical void in the simulation with intragranular spherical voids}
 
@@ -266,12 +264,11 @@ In Fig. \ref{fig:strength} It has been observed that voids detracts the strength
 \end{figure}
 
 
-The role of void can be concluded as two main parts: source of dislocation and obstacles to dislocations.  Second-phase particles, precipitated within, as a consequence of a thermal treatment, or taken up, as a consequence of a material processing route, into a matrix of the first, dominant phase, disrupt, associated with the occurrence of incoherent or coherent interfaces;the long-range translation symmetry of the matrix. They may induce considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between the volume occupied by the second-phase particle when unconstrained and the space (“hole”) put at its disposal by the matrix. Such misfit can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. A possibly favorable effect of second-phase particles is a contribution to the enhancement of mechanical strength. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. In the discussion of the Frank–Read source for dislocation production  it was made clear that second-phase particles can serve as obstacles for dislocation migration: the stress fields surrounding the second-phase particles can be of “antagonistic” nature and “block” propagation of the stress field of a migrating dislocation: the second-phase particle acts as “pinning point”. It was already indicated that in order that a dislocation can pass two pinning points a critical shear stress is needed that depends on the distance between  obstacles, which can be regarded as second-phase particles:
+The role of void can be concluded as two main parts: source of dislocation and obstacles to dislocations.  Second-phase particles, precipitated within, as a consequence of a thermal treatment, or taken up, as a consequence of a material processing route, into a matrix of the first, dominant phase, disrupt, associated with the occurrence of incoherent or coherent interfaces;the long-range translation symmetry of the matrix. They may induce considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between the volume occupied by the second-phase particle when unconstrained and the space (“hole”) put at its disposal by the matrix. Such misfit can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. A possibly favorable effect of second-phase particles is a contribution to the enhancement of mechanical strength. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. In the discussion of the Frank–Read source for dislocation production  it was made clear that second-phase particles can serve as obstacles for dislocation migration: the stress fields surrounding the second-phase particles can be of block propagation of the stress field of a migrating dislocation: the second-phase particle acts as pinning point. It was already indicated that in order that a dislocation can pass two pinning points a critical shear stress is needed that depends on the distance between  obstacles, which can be regarded as second-phase particles:
 \begin{equation} \label{eq:orowan} 
 \tau_0 = Gb/d
 \end{equation}
-
-where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress.
+where $d$ represents the distance between obstancle A and B , reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process with $\tau_0$ as the Orowan (shear) stress.
 
 As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sides of a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interior after dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systems towards the spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from the dash circle 
 \section{conclusion}
