--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -278,7 +278,7 @@ In this paper, deformation behavior of two phase TiAl alloy under tensile loadin
 
 (2) The effect of the void defect on the strength of the two phase alloy is sensitive to the location of the void. The void located inside the grain decrease the strength to the material because this type defect weaken the grain thus caused even more serious stress concentration, and the void at phase boundary have less impact on the strength of the material because this type void help to release of local stress at grain boundary.
 
-
+mark
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
 \funding{This research was funded by the National Natural Science Foundation of China (No. 51665030) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30) and the Doctoral Research Foundation of Lanzhou University of Technology.}
